Closed Bug 1806167 Opened 3 years ago Closed 3 years ago

[Regression] accesskey turned into non-uniform letter case

Categories

(Firefox :: Theme, defect)

Firefox 109
Unspecified
Windows 10
defect

Tracking

()

VERIFIED FIXED
110 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox108 --- unaffected
firefox109 + verified
firefox110 + verified

People

(Reporter: yfdyh000, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image zh-CN, on links

In multiple locales, the context menu's access key is show as "Label (key)" deal with the letter is not in the translation, and the key should always be uppercase. In recent versions, this has become based on the original character, which is ugly to users. It affects the zh-CN, zh-TW, ja, etc.

STR:

  1. Start the affected locale version. e.g. https://ftp.mozilla.org/pub/firefox/releases/109.0b3/win64/zh-CN/Firefox%20Setup%20109.0b3.exe, or app: firefox-l10n in mozregression.
  2. Check the context menu items on tab, tabs bar, links, images, etc.

Actual results:
See the screenshot, the accesskey case is mixed.

Regression window:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=efbd04cb07486419679cf588ba6095f7ef9edef6&tochange=f85cd6ba1889c83b01c97d47a337caac6dcc1d8f
The https://hg.mozilla.org/mozilla-central/rev/9da892f98d1bdff624efca7bd698b0142d136a71 is suspect.

Set release status flags based on info from the regressing bug 1799460

:emilio, since you are the author of the regressor, bug 1799460, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

Make accesskey reftest use modern box layout to test this code path.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Duplicate of this bug: 1806641
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ef93f662cd54 Always append the access key in uppercase. r=jfkthame,layout-reviewers
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch

The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox109 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(emilio)

Comment on attachment 9308771 [details]
Bug 1806167 - Always append the access key in uppercase. r=jfkthame

Beta/Release Uplift Approval Request

  • User impact if declined: comment 0
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: comment 0
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Trivial fix + test
  • String changes made/needed: none
  • Is Android affected?: No
Flags: needinfo?(emilio)
Attachment #9308771 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Reproduced the issue in Beta 109.0b5 on Windows 10.
Verified - Fixed in latest Nightly 110.0a1 (2023-01-03) on Windows 10 using zh-CN, zh-TW and ja locale builds.

Comment on attachment 9308771 [details]
Bug 1806167 - Always append the access key in uppercase. r=jfkthame

Approved for 109.0b8.

Attachment #9308771 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Verified - Fixed in Beta 109.0b8 on Windows 10 using zh-CN, zh-TW and ja locale builds.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
Duplicate of this bug: 1809037
Regressions: 1868190
No longer regressions: 1868190
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: