Bug 1806167 - Always append the access key in uppercase. r=jfkthame,layout-reviewers a=RyanVM

Make accesskey reftest use modern box layout to test this code path.

Differential Revision: https://phabricator.services.mozilla.com/D164942